--- a/url-shortener-api/build.gradle
+++ b/url-shortener-api/build.gradle
@@ -8,8 +8,9 @@ apply plugin: 'java'
 // Dependencies
 // ============
 dependencies {
-    compile "javax.ws.rs:javax.ws.rs-api:$jaxrsVersion"
-    
+    implementation "javax.ws.rs:javax.ws.rs-api:$jaxrsVersion"
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
+
     processor "org.immutables:value:2.8.2"
     compileOnly "org.immutables:value:2.8.2"
 
