--- a/url-shortener-server/build.gradle
+++ b/url-shortener-server/build.gradle
@@ -8,24 +8,24 @@ apply plugin: 'java'
 // Dependencies
 // ============
 dependencies {
-    compile project(':url-shortener-api')
-    compile "io.dropwizard:dropwizard-core:$dropwizardVersion"
-    compile "io.dropwizard:dropwizard-jdbi3:$dropwizardVersion"
+    implementation project(':url-shortener-api')
+    implementation "io.dropwizard:dropwizard-core:$dropwizardVersion"
+    implementation "io.dropwizard:dropwizard-jdbi3:$dropwizardVersion"
 
-    compile "org.antlr:stringtemplate:$antlrVersion"
-    compile "org.postgresql:postgresql:$postgresqlVersion"
-    compile "commons-codec:commons-codec:$commonsCodecVersion"
-    compile "com.google.guava:guava:$guavaVersion"
-    compile "org.apache.directory.studio:org.apache.commons.io:$apacheCommonsVersion"
-    compile "org.immutables:value:$immutablesVersion"
+    implementation "org.antlr:stringtemplate:$antlrVersion"
+    implementation "org.postgresql:postgresql:$postgresqlVersion"
+    implementation "commons-codec:commons-codec:$commonsCodecVersion"
+    implementation "com.google.guava:guava:$guavaVersion"
+    implementation "org.apache.directory.studio:org.apache.commons.io:$apacheCommonsVersion"
+    implementation "org.immutables:value:$immutablesVersion"
     
-    compile "javax.activation:activation:$activationVersion"
-    compile "org.glassfish.jaxb:jaxb-runtime:$jaxbVersion"
-    compile "javax.xml.bind:jaxb-api:$jaxbVersion"
+    implementation "javax.activation:activation:$activationVersion"
+    implementation "org.glassfish.jaxb:jaxb-runtime:$jaxbVersion"
+    implementation "javax.xml.bind:jaxb-api:$jaxbVersion"
 
 
     processor "org.immutables:value:2.8.2"
     compileOnly "org.immutables:value:2.8.2"
 
-    testCompile "io.dropwizard:dropwizard-testing:$dropwizardVersion"
+    testImplementation "io.dropwizard:dropwizard-testing:$dropwizardVersion"
 }
