--- a/url-shortener-server/build.gradle
+++ b/url-shortener-server/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation "com.google.guava:guava:$guavaVersion"
     implementation "org.apache.directory.studio:org.apache.commons.io:$apacheCommonsVersion"
     implementation "org.immutables:value:$immutablesVersion"
+    implementation "com.smoketurner:dropwizard-swagger:2.0.0-1"
     
     implementation "javax.activation:activation:$activationVersion"
     implementation "org.glassfish.jaxb:jaxb-runtime:$jaxbVersion"
